<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".app.DetailsActivity"
        tools:showIn="@layout/activity_details">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toBottomOf="@+id/titleLabelTV" />

        <TextView
            android:id="@+id/numberOfVolumesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toBottomOf="@+id/volumeNumLabelTV" />

        <TextView
            android:id="@+id/authorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toBottomOf="@+id/authorLabelTV" />
        <TextView
            android:id="@+id/synopsisTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsisLabelTV" />

        <ImageView
            android:id="@+id/posterIV"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/manga_poster_cont_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/titleLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/titleLabel"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/volumeNumLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/numberOfVolumesLabel"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <TextView
            android:id="@+id/synopsisLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="56dp"
            android:fontFamily="sans-serif"
            android:text="@string/synopsisLabel"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterIV" />

        <TextView
            android:id="@+id/characterDetailsLabelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/character_list_label"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsisTV" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/charactersRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterDetailsLabelTV" />
        <TextView
            android:id="@+id/authorLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/posterIV"
            app:layout_constraintTop_toBottomOf="@+id/numberOfVolumesTV"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"/>


        <ImageButton
            android:id="@+id/favoriteIBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/fav_button_cont_desc"
            app:layout_constraintTop_toBottomOf="@+id/posterIV"
            app:layout_constraintBottom_toTopOf="@+id/synopsisLabelTV"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/btn_star"
            tools:layout_editor_absoluteX="47dp" />


        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>